force-app/main/default/main/default/objects/Benefit_Individual__c/Benefit_Individual__c.object-meta.xml
<CustomObject>
    <label>Benefit Individual</label>
    <nameField>
        <displayFormat>BI{000}</displayFormat>
        <label>Individual Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>