force-app/main/default/main/default/objects/Benefit_Individual__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>