force-app/main/default/main/default/objects/Benefit_Individual__c/fields/National_Identifier__c.field-meta.xml
<CustomField>
    <fullName>National_Identifier__c</fullName>
    <label>National Identifier</label>
    <length>9</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>