force-app/main/default/main/default/objects/Benefit_Individual__c/fields/Primary_Coverage_Holder__c.field-meta.xml
<CustomField>
    <fullName>Primary_Coverage_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Coverage Holder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Benefit_Individual__c.Relation__c</field>
            <operation>equals</operation>
            <value>Self</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Benefit_Individual__c</referenceTo>
    <relationshipLabel>Benefit Individuals</relationshipLabel>
    <relationshipName>Benefit_Individuals</relationshipName>
    <type>Lookup</type>
</CustomField>