force-app/main/default/main/default/objects/Benefit_Individual__c/fields/Primary_Holder__c.field-meta.xml
<CustomField>
    <fullName>Primary_Holder__c</fullName>
    <formula>Primary_Coverage_Holder__r.First_Name__c + &apos; &apos; +  Primary_Coverage_Holder__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Holder</label>
    <type>Text</type>
</CustomField>