force-app/main/default/main/default/objects/Benefit_Individual__c/validationRules/Primary_Coverage_Holder_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Coverage_Holder_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Relation__c) != &apos;Self&apos;, ISBLANK( Primary_Coverage_Holder__c ))</errorConditionFormula>
    <errorMessage>Primary Coverage Holder Required.</errorMessage>
</ValidationRule>